<resources>
    <string name="app_name">Sandwich Club</string>

    <!-- Detail Activity-->
    <string name="detail_also_known_as_label">Also known as:</string>
    <string name="detail_place_of_origin_label">Place of origin:</string>
    <string name="detail_description_label">Description:</string>
    <string name="detail_ingredients_label">Ingredients:</string>

    <!-- Content descriptions-->
    <string name="sandwich_picture_content_description">Sandwich picture</string>

    <!-- Error messages-->
    <string name="detail_error_message">Sandwich data not available</string>
    <string name="boom">boom</string>
    <string name="no_description_supplied">No description supplied</string>
    <string name="origin_unknown">Unknown</string>
    <string name="no_description">No description available</string>
</resources>
